--- a/css/index.scss
+++ b/css/index.scss
@@ -22,6 +22,9 @@ header{
                 display: flex;
                 flex-direction: column;
                 align-items: flex-end;
+
+                width: 30px; height: 21px;
+                position: relative;
                 span{
                     width: 25px;
                     height: 2px;
@@ -30,10 +33,40 @@ header{
                     display: block;
                     text-align: right;
                     z-index: 999;
+
+                    // width: 100%;
+                    position: absolute;
+                    left: 0;
+
+                    &:nth-of-type(1){
+                        top: 0%;
+                        width: 30px;
+                        background-color: rgb(255, 255, 255);
+                    }
+                    &:nth-of-type(2){
+                        top: 30%;
+                        transform: translateY(50%);
+                        background-color: rgb(255, 255, 255);
+                    }
+                    &:nth-of-type(3){
+                        bottom: 0%;
+                        width: 30px;
+                        background-color: rgb(255, 255, 255);
+                    }
                 }
-                span:nth-of-type(2){
-                    width: 30px;
-                }
+            }
+            &:hover > span:nth-child(1){
+                top:40%;
+                transform: translateY(-50%) rotate(45deg);
+            }
+            &:hover > span:nth-child(2){
+                transform: translateX(100%);
+                opacity: 0;
+                transition: 1s;
+            }
+            &:hover > span:nth-child(3){
+                bottom:40%;
+                transform: translateY(50%) rotate(-45deg);
             }
         }
     }
@@ -42,6 +75,97 @@ header{
         span{
             background-color: #000 !important;
             z-index: 999;
+        }
+        &:hover > span:nth-child(1){
+            top:40%;
+            transform: translateY(-50%) rotate(45deg);
+        }
+        &:hover > span:nth-child(2){
+            transform: translateX(100%);
+            opacity: 0;
+            transition: 1s;
+        }
+        &:hover > span:nth-child(3){
+            bottom:40%;
+            transform: translateY(50%) rotate(-45deg);
+        }
+    }
+}
+
+// burger menu
+.menu{
+    background-color: #fff;
+    padding-top: 20%;
+    font-size: 24px;
+    padding-left: 6%;
+    height: 100vh;
+
+    display: none;
+
+    &.active{
+        display: block;
+        position: fixed;
+        left: 0; top: 0;
+        background-color: #fff;
+        width: 100%;
+        // height: 0%;
+        z-index: 9999;
+        // background-attachment: scroll;
+        animation: ani-6 1s linear forwards;
+
+        height: 100%;
+        overflow: auto;
+    }
+    @keyframes ani-6 {
+        0%{
+            transform: translateY(100%);
+            border-radius: 100%;
+        }
+        50%{
+            transform: translateY(30%);
+            border-radius: 50%;
+        }
+        100%{
+            transform: translateY(0%);
+            border-radius: 0%;
+        }
+    }
+    a{
+        color: #000;
+        font-weight: 800;
+        display: block;
+        margin-bottom: 5%;
+    }
+    ul{
+        li{
+            a{
+                color: rgb(136, 136, 136);
+            }
+            &:nth-of-type(4){
+                font-size: 20px;
+            }
+            &:nth-of-type(5){
+                font-size: 20px;
+            }
+        }
+    }
+    div{
+        margin: 10% 0 20%;
+        font-size: 14px;
+        white-space: pre-line;
+        p{
+            line-height: 1.8rem;
+            span{
+                color: rgb(136, 136, 136);
+            }
+            &:nth-child(2){
+                span{
+                    font-size: 10px;
+                }
+            }
+        }
+        a{
+            color: rgb(136, 136, 136);
         }
     }
 }
@@ -55,10 +179,11 @@ main .section1{
     overflow:hidden;
     position: relative;
     .video{
-        width:100%; overflow: hidden;
+        overflow: hidden;
         video{
             width: auto;
             height: 100vh;
+            transform: translateX(-100px);
         }
     }
     .s1-c1{
@@ -94,8 +219,8 @@ main .section1{
         .dot{
             a{
                 display: inline-block;
-                width: 5px;
-                height: 5px;
+                width: 5.5px;
+                height: 5.5px;
                 background-color: #ddd;
                 border-radius: 100%;
                 z-index: 99;
@@ -237,7 +362,7 @@ main .section2{
                     height: 100%;
                     display: inline-block;
                     &.active{
-                        animation: ani-2 2s forwards;
+                        animation: ani-2 1.5s forwards;
                     }
                     img{
                         width: 100%;
@@ -253,7 +378,7 @@ main .section2{
                     white-space: pre-line;
                     z-index: 99;
                     &.active{
-                        animation: ani-3 2s forwards;
+                        animation: ani-3 1.5s forwards;
                     }
                 }
             }
@@ -326,7 +451,7 @@ main .section3{
         position: absolute;
         left: 0; top: 0;
         &.active{
-            animation: shine 2s forwards;
+            animation: shine 1s forwards;
         }
         div{
             padding-left: 5%;
