--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,7 @@ header {
   right: 0;
   z-index: 500;
   padding: 20px;
+  z-index: 9999;
 }
 header div {
   display: flex;
@@ -111,6 +112,7 @@ header div div:hover > span:nth-child(3) {
 }
 header.active {
   background-color: rgb(255, 255, 255);
+  z-index: 999;
 }
 header.active span {
   background-color: #000 !important;
@@ -132,24 +134,24 @@ header.active:hover > span:nth-child(3) {
 
 .menu {
   background-color: #fff;
-  padding-top: 20%;
   font-size: 24px;
   padding-left: 6%;
-  height: 100vh;
+  padding-top: 20%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   display: none;
 }
 .menu.active {
   display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
-  background-color: #fff;
-  width: 100%;
-  z-index: 9999;
+  overflow: auto;
+  z-index: 999;
   -webkit-animation: ani-6 1s linear forwards;
           animation: ani-6 1s linear forwards;
-  height: 100%;
-  overflow: auto;
 }
 @-webkit-keyframes ani-6 {
   0% {
@@ -210,6 +212,10 @@ header.active:hover > span:nth-child(3) {
 }
 .menu div a {
   color: rgb(136, 136, 136);
+}
+
+main {
+  z-index: -99;
 }
 
 main > div {
