--- a/css/index.scss
+++ b/css/index.scss
@@ -7,6 +7,7 @@ header{
     top: 0; right: 0;
     z-index: 500;
     padding: 20px;
+    z-index: 9999;
     div{
         display: flex;
         justify-content: space-between;
@@ -72,6 +73,7 @@ header{
     }
     &.active{
         background-color: rgb(255, 255, 255);
+        z-index: 999;
         span{
             background-color: #000 !important;
             z-index: 999;
@@ -90,31 +92,28 @@ header{
             transform: translateY(50%) rotate(-45deg);
         }
     }
-}
 
+}
 // burger menu
 .menu{
     background-color: #fff;
-    padding-top: 20%;
     font-size: 24px;
     padding-left: 6%;
-    height: 100vh;
+    padding-top: 20%;
+    position: fixed;
+    left: 0; top: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 
     display: none;
 
     &.active{
         display: block;
-        position: fixed;
-        left: 0; top: 0;
-        background-color: #fff;
-        width: 100%;
-        // height: 0%;
-        z-index: 9999;
-        // background-attachment: scroll;
-        animation: ani-6 1s linear forwards;
-
-        height: 100%;
         overflow: auto;
+        z-index: 999;
+        animation: ani-6 1s linear forwards;
     }
     @keyframes ani-6 {
         0%{
@@ -171,6 +170,7 @@ header{
 }
 
 // section1
+main{z-index: -99;}
 main > div{overflow:hidden;}
 
 main .section1{
